--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </div>
       </div>
       <div class="text-center">
-        <a href="src/chenguangda_jianli.doc" class="waves-effect waves-light btn btn-download"><i class="mdi-file-file-download left"></i>下载简历</a>
+        <a href="" class="waves-effect waves-light btn btn-download"><i class="mdi-file-file-download left"></i>下载简历</a>
         <a id="mobile-btn" class="waves-effect waves-light teal btn modal-trigger btn-download" href="#modal-mobile"><i class="mdi-hardware-phone-iphone left"></i>手机查看</a>
         <div id="modal-mobile" class="modal">
           <div class="modal-content">
