--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="box">
     <div class="innerbox">
         <a href="https://luxiaoyuancc.github.io/resume"><input type="button" value="简历"></a>
-        <a href="https://luxiaoyuancc.github.io/mi/"><input type="button" value="天猫"></a>
+        <a href="https://luxiaoyuancc.github.io/Tmall/"><input type="button" value="天猫"></a>
         <a href="https://luxiaoyuancc.github.io/mi/"><input type="button" value="小米"></a>
         <a href="http://www.baidu.com"><input type="button" value="TodoList"></a>
     </div>
