--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             background: #eeeeee;
         }
         .box{
-            width:600px;
-            height:200px;
+            width:450px;
+            height:300px;
             border:1px solid red;
             margin:200px auto;
         }
@@ -25,10 +25,11 @@
         input{
             width:100px;
             height:40px;
-            font-size: 20px;
+            font-size: 16px;
             margin-top: 25px;
             border:0;
             cursor: pointer;
+            border-radius: 50px;
         }
         input:hover{
             background: #3780ff;
@@ -41,10 +42,13 @@
         <a href="https://luxiaoyuancc.github.io/resume"><input type="button" value="简历"></a>
         <a href="https://luxiaoyuancc.github.io/Tmall/"><input type="button" value="天猫"></a>
         <a href="https://luxiaoyuancc.github.io/mi/"><input type="button" value="小米"></a>
-        <a href="http://www.baidu.com"><input type="button" value="TodoList"></a>
     </div>
     <div class="innerbox">
+        <a href="https://luxiaoyuancc.github.io/listForPC/"><input type="button" value="PC便签"></a>
+        <a href="https://luxiaoyuancc.github.io/listForPhone/"><input type="button" value="移动便签"></a>
         <a href="http://www.baidu.com"><input type="button" value="打字游戏"></a>
+    </div>
+    <div class="innerbox">
         <a href="http://www.baidu.com"><input type="button" value="贪吃蛇"></a>
         <a href="http://www.baidu.com"><input type="button" value="天气预报"></a>
         <a href="http://www.baidu.com"><input type="button" value="项目"></a>
