--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,6 @@
   <title>路雅远-web前端简历</title>
   <meta name="description" content="路雅远的前端简历。">
   <link rel="stylesheet" href="src/css/page/index_25f32d2.css">
-  <link rel="stylesheet" href="src/css/page/index1.css">
   <script data-main="src/js/bulid/main" src="src/js/libs/require.js"></script>
 </head>
 <body>
@@ -154,7 +153,7 @@
 
   <div class="page page4 ">
     <div class="contain">
-      <h4 class="text-center">个人项目/作品</h4>
+      <h4 class="text-center">个人项目</h4>
       <ul class="collection row">
         <li class="collection-item col s11 m5 avatar">
           <i class="mdi-action-face-unlock circle"></i>
