--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         input:hover{
             background: #3780ff;
         }
+        input:focus{
+            outline: none;
+        }
     </style>
 </head>
 <body>
