--- a/resume/index.html
+++ b/resume/index.html
@@ -239,7 +239,7 @@
         <div id="modal-mobile" class="modal">
           <div class="modal-content">
             <h5>扫一扫，点击查看</h5>
-            <p class="text-center"><img src="#" title="扫描二维码"></p>
+            <p class="text-center"><img src="src/imgs/phone.png" title="扫描二维码"></p>
           </div>
           <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">确定</a>
