--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <a href="https://luxiaoyuancc.github.io/WordGame/"><input type="button" value="打字游戏"></a>
     </div>
     <div class="innerbox">
-        <a href="https://luxiaoyuancc.github.io/tanchishe/" value="贪吃蛇"></a>
+        <a href="https://luxiaoyuancc.github.io/tanchishe/">><input type="button" value="贪吃蛇"></a>
         <a href="https://luxiaoyuancc.github.io/tianqiyubao/"><input type="button" value="天气预报"></a>
-        <a href="http://www.baidu.com"><input type="button" value="项目"></a>
+        <a href="https://luxiaoyuancc.github.io/xiangmu/"><input type="button" value="项目"></a>
     </div>
 </div>
 </body>
