--- a/WordGame/index.html
+++ b/WordGame/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>jquery+html5仿金山打字游戏特效 - 站长素材</title>
+<title>打字游戏</title>
 <script src="jquery.js"></script>
 <script src="typegame.js"></script>
 <script>
@@ -75,9 +75,6 @@
 <div class="stop1">暂停游戏</div>
 <div class="xiabian"></div>
 
-<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
-<p>适用浏览器：360、FireFox、Chrome、Safari、Opera、傲游、搜狗、世界之窗. 不支持IE8及以下浏览器。</p>
-<p>来源：<a href="http://www.moke8.com/daima/" target="_blank">站长素材</a></p>
-</div>
+
 </body>
 </html>
