--- a/listForPhone/index.html
+++ b/listForPhone/index.html
@@ -16,15 +16,15 @@
     </header>
     <main>
         <div class="xiangmu">
-            <div class="img img1">添加事项</div>
+            <div class="img img1"><span>添加事项</span></div>
             <!--<p>添加事项</p>-->
         </div>
         <div class="xiangmu">
-            <div class="img img2">查看未完成</div>
+            <div class="img img2"><span>未完成</span></div>
             <!--<p>待完事项</p>-->
         </div>
         <div class="xiangmu">
-            <div class="img img3">查看已完成</div>
+            <div class="img img3"><span>已完成</span></div>
             <!--<p>完成项</p>-->
         </div>
     </main>
